--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -22,13 +22,33 @@ $font-path: "../assets/fonts";
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 
+//$colors: (
+//        primary: #387ef5,
+//        secondary: #32db64,
+//        danger: #f53d3d,
+//        light: #f4f4f4,
+//        dark: #222
+//);
 $colors: (
-        primary: #387ef5,
-        secondary: #32db64,
-        danger: #f53d3d,
-        light: #f4f4f4,
-        dark: #222
+        primary:    #00aef0,
+        secondary:  #ed008c,
+        danger:     #f57b20,
+        light:      #f4f4f4,
+        dark:       #222,
+        favorite:   #7ac143
 );
+
+$font-family-base: 'Montserrat', Helvetica, sans-serif;
+
+//toolbar and tabs bar bottom
+$toolbar-background: color($colors, light);
+$tabs-background: $toolbar-background;
+//$tabs-tab-color-inactive: color($colors, danger);
+$tabs-tab-color-active: color($colors, favorite);
+//$tabs-border-color: color($colors, danger);
+
+$searchbar-ios-background-color: color($colors, danger);
+
 
 // App iOS Variables
 // --------------------------------------------------
