fix(page): made pages wider to use space on desktop

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -23,8 +23,13 @@ body {
   -webkit-user-select: initial;
 }
 
+.ion-page{
+  background: url('../assets/img/flag-parade.jpg');
+  background-size: cover;
+}
+
 .scroll-content {
-  max-width: 800px;
+  max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
 }
