--- a/src/components/exhibitor-card/exhibitor-card.scss
+++ b/src/components/exhibitor-card/exhibitor-card.scss
@@ -1,11 +1,15 @@
 exhibitor-card {
-  img{
+  ion-img{
     height: 98px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 200px;
-    width: initial;
-    padding:5px;
+    width: 100%;
+    background:transparent;
+    img{
+      height:100%;
+      width: initial;
+      display: block;
+      margin: auto;
+
+    }
   }
   min-width: 300px;
   display:block;
