--- a/src/components/exhibitor-card/exhibitor-card.scss
+++ b/src/components/exhibitor-card/exhibitor-card.scss
@@ -12,6 +12,14 @@ exhibitor-card {
 
     }
   }
+  img{
+    padding: 5px;
+    height: 98px;
+    width: initial;
+    display: block;
+    margin: auto;
+
+  }
   min-width: 300px;
   display:block;
 }
