--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,4 +1,8 @@
 page-about {
+  text-align: center;
+  ul{
+    text-align: left;
+  }
 
   ion-card.header-image-card {
 
@@ -35,6 +39,29 @@ page-about {
     }
 
   }
+
+  .image-card{
+    position: relative;
+    text-align: center;
+
+    .card-title {
+      position: absolute;
+      top: 36%;
+      font-size: 2.0em;
+      width: 100%;
+      font-weight: bold;
+      color: #fff;
+    }
+
+    .card-subtitle {
+      font-size: 1.0em;
+      position: absolute;
+      top: 52%;
+      width: 100%;
+      color: #fff;
+    }
+  }
+
 
 }
 
