--- a/src/components/exhibitor-card/exhibitor-card.html
+++ b/src/components/exhibitor-card/exhibitor-card.html
@@ -1,6 +1,6 @@
 <ion-card *ngIf="exhibitor" (click)="showModal(exhibitor)">
     <ion-img  src="assets/logos/{{exhibitor.code}}.png" alt="" *ngIf="hasCustomLogo(exhibitor.code)"></ion-img>
-    <ion-img src="assets/logos/ESN-STAR.png" alt="" *ngIf="!hasCustomLogo(exhibitor.code)"></ion-img>
+    <img src="assets/logos/ESN-STAR.png" alt="" *ngIf="!hasCustomLogo(exhibitor.code)">
     <ion-card-content>
         <ion-card-title>
             {{exhibitor.name}}
