--- a/src/components/directions-card/directions-card.html
+++ b/src/components/directions-card/directions-card.html
@@ -38,7 +38,7 @@
     <ion-row>
         <ion-col>
             <a ion-button clear full icon-right href="https://www.google.com/maps/dir//Henry-Ford-Bau%2C%20Garystra%C3%9Fe%2035%2C%2014195%20Berlin-Dahlem" target="_blank">
-                {{drivingDistance}}<span>&nbsp;&nbsp;&nbsp;</span>{{drivingDuration}} <span>&nbsp;{{'by car'}}</span>
+                {{drivingDistance}}<span>&nbsp;&nbsp;&nbsp;</span>{{drivingDuration}} <span>&nbsp;{{"by car" |trans }}</span>
                 <ion-icon name="navigate"></ion-icon>
             </a>
         </ion-col>
