--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,6 +39,7 @@ $colors: (
 );
 
 $font-family-base: 'Montserrat', Helvetica, sans-serif;
+//$font-size-root: 70%;
 $background-color: rgba(255, 255, 255, 0.86);
 
 //toolbar and tabs bar bottom
