added partner list overview

--- a/App/src/app/app.scss
+++ b/App/src/app/app.scss
@@ -29,6 +29,10 @@ body {
     max-height: 100.2%;
   user-select: initial;
   -webkit-user-select: initial;
+
+  .scroll-content{
+    margin-top: 158px;
+  }
 }
 
 .ion-page{
