--- a/App/src/components/combined-navbar/combined-navbar.html
+++ b/App/src/components/combined-navbar/combined-navbar.html
@@ -12,4 +12,7 @@
     <p (click)="goWhyExhibitor()">
             <span>{{"For exhibitors"|trans}}</span>
     </p>
+    <p (click)="goPartners()">
+        <span>{{"Partners"|trans}}</span>
+    </p>
 </div>
