--- a/App/src/components/desktop-navbar/desktop-navbar.html
+++ b/App/src/components/desktop-navbar/desktop-navbar.html
@@ -9,6 +9,10 @@
         <button ion-button clear (click)="goWhyStudent()">
                 {{"For students"|trans}}
         </button>
+        <button ion-button clear (click)="goPartners()">
+            {{"Partners"|trans}}
+        </button>
+        
         <div style="float:right">
             <language-switch-button></language-switch-button>
         </div>
