--- a/App/src/components/nav-img-card/nav-img-card.html
+++ b/App/src/components/nav-img-card/nav-img-card.html
@@ -1,7 +1,7 @@
 <ion-card>
 
     <img [src]="imgUrl" alt="">
-    <div class="color-layover"></div>
+    <div class="color-layover" [style.background-color]="color"></div>
     <p class="card-title">
         {{cardText | trans}}
     </p>
