--- a/App/src/pages/partners-page/partners-page.scss
+++ b/App/src/pages/partners-page/partners-page.scss
@@ -1,9 +1,23 @@
 partners-page {
-  ion-card.partner-card{
-    margin:auto;
-    max-width: 400px;
-    min-width: 300px;
-    ion-card-content *{
+  ion-card.partner-card {
+    //margin:auto;
+    //max-width: 400px;
+    //min-width: 300px;
+
+    .partner-logo-container {
+      height: 220px;
+      margin: 0 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      img {
+        max-width: 100%;
+        max-height: 100%;
+        width: auto;
+        height: auto;
+      }
+    }
+    ion-card-content * {
       text-align: left !important;
     }
   }
