--- a/App/src/components/mobile-navbar/mobile-navbar.html
+++ b/App/src/components/mobile-navbar/mobile-navbar.html
@@ -20,11 +20,16 @@
     <p (click)="goWhyExhibitor()">
             <span>{{"For exhibitors"|trans}}</span>
     </p>-->
+    <p (click)="goUniversitiesOverview()">
+        <span>{{"Universities"|trans}}</span>
+    </p>
     <p (click)="goPartners()">
         <span>{{"Exhibitors"|trans}}</span>
     </p>
 
-    <p (click)="goUniversitiesOverview()">
-        <span>{{"Universities"|trans}}</span>
+    <p (click)="goSpeakers()">
+        <span>{{"Speakers"|trans}}</span>
     </p>
+
+
 </div>
