--- a/App/src/pages/partners-page/partners-page.scss
+++ b/App/src/pages/partners-page/partners-page.scss
@@ -4,7 +4,7 @@ partners-page {
     //max-width: 400px;
     //min-width: 300px;
 
-    .partner-logo-container {
+    .speaker-logo-container {
       height: 220px;
       margin: 0 16px;
       display: flex;
