--- a/App/src/components/desktop-navbar/desktop-navbar.html
+++ b/App/src/components/desktop-navbar/desktop-navbar.html
@@ -18,6 +18,10 @@
         <button ion-button clear (click)="goPartners()">
             {{"Exhibitors"|trans}}
         </button>
+
+        <button ion-button clear (click)="goSpeakers()">
+            {{"Speakers"|trans}}
+        </button>
         
         <div style="float:right">
             <language-switch-button></language-switch-button>
